--- a/onepiecex-session-share-spring-boot-starter/pom.xml
+++ b/onepiecex-session-share-spring-boot-starter/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>onepiecex-session-share</artifactId>
-        <groupId>com.github.onepiecex.session.share</groupId>
+        <groupId>com.github.onepiecex</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.onepiecex.session.share.spring.boot.starter</groupId>
+    <groupId>com.github.onepiecex</groupId>
     <artifactId>onepiecex-session-share-spring-boot-starter</artifactId>
     <version>1.0</version>
 
