--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
             </dependency>
 
             <dependency>
-                <groupId>com.github.onepiecex.session.share.core</groupId>
+                <groupId>com.github.onepiecex</groupId>
                 <artifactId>onepiecex-session-share-core</artifactId>
                 <version>1.0</version>
             </dependency>
