--- a/onepiecex-session-share-spring-boot-starter/pom.xml
+++ b/onepiecex-session-share-spring-boot-starter/pom.xml
@@ -23,5 +23,11 @@
             <groupId>com.github.onepiecex</groupId>
             <artifactId>onepiecex-session-share-core</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>4.3.9.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
