--- a/onepiecex-session-share-core/pom.xml
+++ b/onepiecex-session-share-core/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <artifactId>onepiecex-session-share</artifactId>
         <groupId>com.github.onepiecex</groupId>
-        <version>1.2</version>
+        <version>1.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.onepiecex</groupId>
     <artifactId>onepiecex-session-share-core</artifactId>
-    <version>1.2</version>
+    <version>1.3</version>
 
 
     <dependencies>
@@ -38,6 +38,11 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
         </dependency>
     </dependencies>
 </project>
