--- a/pom.xml
+++ b/pom.xml
@@ -6,24 +6,9 @@
 
     <groupId>com.github.onepiecex</groupId>
     <artifactId>onepiecex-session-share</artifactId>
-    <version>1.2</version>
+    <version>1.3</version>
 
     <packaging>pom</packaging>
-
-    <!--<distributionManagement>-->
-        <!--<snapshotRepository>-->
-            <!--<id>jbg</id>-->
-            <!--<name>meicanyun Snapshot</name>-->
-            <!--<url>http://maven.chongkouwei.com/nexus/content/repositories/snapshots/</url>-->
-            <!--<uniqueVersion>true</uniqueVersion>-->
-        <!--</snapshotRepository>-->
-
-        <!--<repository>-->
-            <!--<id>jbg</id>-->
-            <!--<name>meicanyun Release</name>-->
-            <!--<url>http://maven.chongkouwei.com/nexus/content/repositories/releases/</url>-->
-        <!--</repository>-->
-    <!--</distributionManagement>-->
 
     <distributionManagement>
         <snapshotRepository>
@@ -36,7 +21,6 @@
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
-
 
     <developers>
         <developer>
@@ -56,6 +40,7 @@
         <jackson.version>2.8.8</jackson.version>
         <slf4j.version>1.7.25</slf4j.version>
         <spring.boot.version>1.5.3.RELEASE</spring.boot.version>
+        <guava.version>22.0</guava.version>
     </properties>
 
     <dependencyManagement>
@@ -97,10 +82,17 @@
             </dependency>
 
             <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.github.onepiecex</groupId>
                 <artifactId>onepiecex-session-share-core</artifactId>
-                <version>1.2</version>
+                <version>1.3</version>
             </dependency>
+
         </dependencies>
     </dependencyManagement>
 
