--- a/pom.xml
+++ b/pom.xml
@@ -6,21 +6,31 @@
 
     <groupId>com.github.onepiecex</groupId>
     <artifactId>onepiecex-session-share</artifactId>
-    <version>1.3</version>
+    <version>1.5</version>
 
     <packaging>pom</packaging>
 
-    <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-        <repository>
-            <id>ossrh</id>
-            <name>Maven Central Staging Repository</name>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-    </distributionManagement>
+
+    <name>Onepiece.x Session-Share</name>
+    <url>https://github.com/onepiecex/session-share</url>
+    <description>
+        session share 通常的做法 放入redis/memcached/jdbc/hazelcast等
+        我的做法是 把session的所有数据通过AES对称加密 放入cookie中 我使用cookie来存放session的所有数据
+        思想来源于ninjaframework 的 session实现
+    </description>
+    
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+        <license>
+            <name>Eclipse Public License - v 1.0</name>
+            <url>http://www.eclipse.org/legal/epl-v10.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
     <developers>
         <developer>
@@ -41,7 +51,22 @@
         <slf4j.version>1.7.25</slf4j.version>
         <spring.boot.version>1.5.3.RELEASE</spring.boot.version>
         <guava.version>22.0</guava.version>
+        <sessionShareCore.version>1.5</sessionShareCore.version>
+        <commonsCodec.version>1.9</commonsCodec.version>
+        <spring.web.version>4.3.9.RELEASE</spring.web.version>
     </properties>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <name>Maven Central Staging Repository</name>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 
     <dependencyManagement>
         <dependencies>
@@ -60,7 +85,7 @@
             <dependency>
                 <groupId>commons-codec</groupId>
                 <artifactId>commons-codec</artifactId>
-                <version>1.9</version>
+                <version>${commonsCodec.version}</version>
             </dependency>
 
             <dependency>
@@ -88,11 +113,16 @@
             </dependency>
 
             <dependency>
-                <groupId>com.github.onepiecex</groupId>
-                <artifactId>onepiecex-session-share-core</artifactId>
-                <version>1.3</version>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>${spring.web.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.github.onepiecex</groupId>
+                <artifactId>onepiecex-session-share-core</artifactId>
+                <version>${sessionShareCore.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
