--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.onepiecex</groupId>
     <artifactId>onepiecex-session-share</artifactId>
-    <version>1.61</version>
+    <version>1.62</version>
 
     <packaging>pom</packaging>
 
@@ -46,13 +46,13 @@
 
     <properties>
         <servlet.version>3.1.0</servlet.version>
-        <jackson.version>2.8.8</jackson.version>
         <slf4j.version>1.7.25</slf4j.version>
         <spring.boot.version>1.5.3.RELEASE</spring.boot.version>
         <guava.version>22.0</guava.version>
-        <sessionShareCore.version>1.61</sessionShareCore.version>
+        <sessionShareCore.version>1.62</sessionShareCore.version>
         <commonsCodec.version>1.9</commonsCodec.version>
         <spring.web.version>4.3.9.RELEASE</spring.web.version>
+        <fastjson.version>1.2.35</fastjson.version>
     </properties>
 
     <distributionManagement>
@@ -86,12 +86,14 @@
                 <groupId>javax.servlet</groupId>
                 <artifactId>javax.servlet-api</artifactId>
                 <version>${servlet.version}</version>
+                <scope>provided</scope>
             </dependency>
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter</artifactId>
                 <version>${spring.boot.version}</version>
+                <scope>provided</scope>
             </dependency>
 
             <dependency>
@@ -101,38 +103,36 @@
             </dependency>
 
             <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-core</artifactId>
-                <version>${jackson.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-databind</artifactId>
-                <version>${jackson.version}</version>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
+                <scope>provided</scope>
             </dependency>
 
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>${slf4j.version}</version>
+                <scope>provided</scope>
             </dependency>
 
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+                <scope>provided</scope>
             </dependency>
 
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-web</artifactId>
                 <version>${spring.web.version}</version>
+                <scope>provided</scope>
             </dependency>
 
             <dependency>
                 <groupId>com.github.onepiecex</groupId>
-                <artifactId>onepiecex-session-share-core</artifactId>
+                <artifactId>session-share-core</artifactId>
                 <version>${sessionShareCore.version}</version>
             </dependency>
         </dependencies>
@@ -225,8 +225,8 @@
     </profiles>
 
     <modules>
-        <module>onepiecex-session-share-core</module>
-        <module>onepiecex-session-share-spring-boot-starter</module>
+        <module>session-share-core</module>
+        <module>session-share-spring-boot-starter</module>
     </modules>
     
 </project>
